# servicetask

./: README.md
Atroshenko/: CMakeLists.txt  Makefile  config.c  config.h  daemonize.c  daemonize.h  err_handling.c  err_handling.h  listen_changes.c  listen_changes.h  main.c  servicetask
